--- a/src/style.css
+++ b/src/style.css
@@ -198,9 +198,9 @@ body {
 }
 
 .search{
-  background: rgb(234, 230, 230);
+  background: rgb(207, 198, 198);
   color: black;
-  border-radius: 5px;
+  border-radius: 25px;
   padding: 1rem;
   width: 100%;
 }
@@ -219,8 +219,8 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: rgb(86, 83, 83);
-  border-radius: 6px;
-  padding: 2rem 8rem;
+  border-radius: 50px;
+  padding: 1rem 2rem;
 }
 
 .back-btn > .material-symbols-outlined {
@@ -244,4 +244,10 @@ body {
 }
 .pause-btn > .material-symbols-outlined {
   font-size: 40px;
+}
+
+.go-back-btn{
+  border-radius: 10px;
+  background-color: rgb(57, 55, 55);
+  color: white
 }
